--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
           android:versionName="1.0">
 
 
-    <uses-sdk android:minSdkVersion="14" android:maxSdkVersion="21"/>
+    <uses-sdk android:minSdkVersion="14" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -19,7 +19,7 @@
     <application
             android:name=".ExtApplication"
             android:theme="@style/CustomActionBarTheme"
-            android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+            android:label="@string/app_name" android:icon="@drawable/logo">
 
 
         <activity android:name=".MainActivity"
@@ -32,7 +32,9 @@
         </activity>
 
 
-
+        <activity android:name="com.google.android.gms.ads.AdActivity"
+                  android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+                  android:theme="@android:style/Theme.Translucent" />
 
         <meta-data
                 android:name="com.google.android.gms.version"
