--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,7 @@
           android:versionName="1.0">
 
 
-    <uses-sdk android:minSdkVersion="14" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="21"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
@@ -17,13 +16,18 @@
     <uses-feature android:glEsVersion="0x00020000"
                   android:required="true"/>
     <application
+            android:allowBackup="true"
             android:name=".ExtApplication"
             android:theme="@style/CustomActionBarTheme"
-            android:label="@string/app_name" android:icon="@drawable/logo">
+            android:label="@string/app_name"
+            android:icon="@drawable/logo"
+           >
 
 
         <activity android:name=".MainActivity"
-                  android:screenOrientation="portrait"  android:windowSoftInputMode="adjustPan"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="adjustPan"
+                  android:launchMode="singleTask"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -48,6 +52,6 @@
         <provider android:name="com.kostas.model.DataProvider"
                   android:authorities="com.kostas.contentprovider"/>
 
-        <service android:name="com.kostas.service.RunningService"/>
+        <service android:name="com.kostas.service.RunningService" />
     </application>
 </manifest>
