--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,13 +20,14 @@
     <application
             android:allowBackup="true"
             android:name=".ExtApplication"
-            android:theme="@style/CustomActionBarTheme"
+            android:theme="@style/CustomIntervalTheme"
             android:label="@string/app_name"
             android:icon="@drawable/logo"
            >
 
+        <!--<meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>-->
 
-        <activity android:name=".IntervalActivity"
+        <activity android:name=".MainActivity"
                   android:screenOrientation="portrait"
                   android:windowSoftInputMode="adjustPan"
                   android:launchMode="singleTask"
@@ -37,10 +38,23 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ActivityIntervalNew"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="adjustPan"
+                  android:launchMode="singleTask"
+                  android:label="@string/app_name">
+        </activity>
+
 
         <activity android:name="com.google.android.gms.ads.AdActivity"
                   android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
                   android:theme="@android:style/Theme.Translucent" />
+
+        <!--<activity android:name="com.facebook.FacebookActivity"-->
+                  <!--android:configChanges=-->
+                          <!--"keyboard|keyboardHidden|screenLayout|screenSize|orientation"-->
+                  <!--android:theme="@android:style/Theme.Translucent.NoTitleBar"-->
+                  <!--android:label="@string/app_name" />-->
 
         <meta-data
                 android:name="com.google.android.gms.version"
@@ -53,6 +67,10 @@
 
         <provider android:name="com.kostas.model.DataProvider"
                   android:authorities="com.kostas.contentprovider"/>
+
+        <!--<provider android:authorities="com.facebook.app.FacebookContentProvider{1733286690224529}"-->
+                  <!--android:name="com.facebook.FacebookContentProvider"-->
+                  <!--android:exported="true"/>-->
 
         <service android:name="com.kostas.service.RunningService" />
     </application>
