--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:name=".ExtApplication"
             android:theme="@style/CustomIntervalTheme"
             android:label="@string/app_name"
-            android:icon="@drawable/logo"
+            android:icon="@drawable/ic_launcher"
            >
 
         <!--<meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>-->
