--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
         <!--<meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>-->
 
-        <activity android:name=".MainActivity"
+        <activity android:name=".ActMain"
                   android:screenOrientation="portrait"
                   android:windowSoftInputMode="adjustPan"
                   android:launchMode="singleTask"
@@ -38,13 +38,19 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ActivityIntervalNew"
+        <activity android:name=".ActIntervalNew"
                   android:screenOrientation="portrait"
                   android:windowSoftInputMode="adjustPan"
                   android:launchMode="singleTask"
                   android:label="@string/app_name">
         </activity>
 
+        <activity android:name=".ActIntervalResults"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="adjustPan"
+                  android:launchMode="singleTask"
+                  android:label="@string/app_name">
+        </activity>
 
         <activity android:name="com.google.android.gms.ads.AdActivity"
                   android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
