--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,6 +45,13 @@
                   android:label="@string/app_name">
         </activity>
 
+        <activity android:name=".ActLoginOrRegister"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="adjustPan"
+                  android:launchMode="singleTask"
+                  android:label="@string/app_name">
+        </activity>
+
         <activity android:name=".ActIntervalNew"
                   android:screenOrientation="portrait"
                   android:windowSoftInputMode="adjustPan"
