--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,6 +60,13 @@
                   android:label="@string/app_name">
         </activity>
 
+        <activity android:name=".ActViewIntervals"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="adjustPan"
+                  android:launchMode="singleTask"
+                  android:label="@string/app_name">
+        </activity>
+
         <activity android:name="com.google.android.gms.ads.AdActivity"
                   android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
                   android:theme="@android:style/Theme.Translucent" />
